[gd_scene load_steps=3 format=3 uid="uid://dui84yb47cw3s"]

[ext_resource type="FontFile" uid="uid://2no0t7l41urh" path="res://Comic_Neue/ComicNeue-Regular.ttf" id="1_3vnbn"]
[ext_resource type="Script" path="res://meal_name_recipie_groceries.gd" id="1_in70u"]

[node name="MealNameRecipieGroceries" type="Node2D"]
script = ExtResource("1_in70u")

[node name="Name" type="Label" parent="."]
offset_right = 640.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("1_3vnbn")
theme_override_font_sizes/font_size = 100
text = "placeholder"

[node name="NameEditor" type="TextEdit" parent="."]
offset_right = 640.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("1_3vnbn")
theme_override_font_sizes/font_size = 100
placeholder_text = "dish name"

[node name="Groceries" type="Label" parent="."]
offset_top = 128.0
offset_right = 640.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("1_3vnbn")
theme_override_font_sizes/font_size = 50
text = "Placeholder"

[node name="GroceriesEditor" type="TextEdit" parent="."]
offset_top = 128.0
offset_right = 640.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("1_3vnbn")
theme_override_font_sizes/font_size = 50
placeholder_text = "Ingredients required"

[node name="Recipie" type="Label" parent="."]
offset_left = 640.0
offset_right = 1152.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("1_3vnbn")
theme_override_font_sizes/font_size = 30
text = "Placeholder"

[node name="RecipieEditor" type="TextEdit" parent="."]
offset_left = 640.0
offset_right = 1160.0
offset_bottom = 648.0
theme_override_fonts/font = ExtResource("1_3vnbn")
theme_override_font_sizes/font_size = 30
placeholder_text = "Recipie"

[node name="Edit" type="Button" parent="."]
offset_left = 328.0
offset_top = 576.0
offset_right = 642.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 40
text = "Edit"

[node name="Save" type="Button" parent="."]
offset_left = 328.0
offset_top = 576.0
offset_right = 642.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="Exit" type="Button" parent="."]
offset_top = 576.0
offset_right = 328.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
